--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -109,3 +109,14 @@ body {
         margin-bottom: 3rem;
     }
 }
+
+/* ------------------------------------------------ */
+/* HEADING SECONDARY BOX EFFECT | FEATURES SECTION
+/* ------------------------------------------------ */
+
+.section-features__heading {
+    padding: 1.2rem;
+    transition: all 500ms;
+    position: relative;
+
+}
