--- a/resources/sass/base/_utilities.scss
+++ b/resources/sass/base/_utilities.scss
@@ -34,6 +34,12 @@
 }
 
 /* ---------------------------------------------------------- */
+/* U-MARGIN-TOP-SMALL CLASS IN TOURS SECTION | POSITION THE TEXT
+/* ---------------------------------------------------------- */
+
+.u-margin-top-small { margin-top: 2rem !important; }
+
+/* ---------------------------------------------------------- */
 /* U-MARGIN-TOP-BIG CLASS IN TOURS SECTION | POSITION THE TEXT
 /* ---------------------------------------------------------- */
 .u-margin-top-medium { margin-top: 5rem !important; }
