--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -15,6 +15,7 @@
 /* - COMPONENTS FOLDER FILES - */
 @import "components/_button.scss";
 @import "components/_bg-video.scss";
+@import "components/_feature-box.scss";
 
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_grid.scss";
