--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -390,7 +390,7 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
   width: 100%;
-  height: 75vh;
+  height: 74vh;
   overflow: hidden;
   position: relative;
   z-index: 600;
@@ -402,7 +402,8 @@ body {
     .section-container-1 {
       padding-bottom: 100rem; } }
   .section-container-1__text {
-    padding: 15rem 5rem 0 5rem; }
+    padding: 15rem 5rem 0 5rem;
+    text-align: center; }
 
 .section-container-2 {
   background-image: linear-gradient(to bottom right, black, rgba(0, 0, 0, 0.8)), url(../images/bf-2.jpg);
@@ -420,7 +421,8 @@ body {
     .section-container-2 {
       padding-bottom: 100rem; } }
   .section-container-2__text {
-    padding: 15rem 5rem 0 5rem; }
+    padding: 15rem 5rem 0 5rem;
+    text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-2__text {
         padding-top: 20rem;
@@ -434,7 +436,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
   width: 100%;
   height: 90vh;
-  margin-top: -12rem;
+  margin-top: -15rem;
   overflow: hidden;
   position: relative;
   z-index: 400; }
@@ -444,7 +446,8 @@ body {
   .section-container-3__text {
     padding-right: 5rem;
     padding-left: 5rem;
-    padding-top: 30rem; }
+    padding-top: 30rem;
+    text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-3__text {
         padding-top: 20rem;
@@ -458,7 +461,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
   width: 100%;
   height: 100vh;
-  margin-top: -15rem;
+  margin-top: -20rem;
   overflow: hidden;
   position: relative;
   z-index: 300; }
@@ -468,7 +471,8 @@ body {
   .section-container-4__text {
     padding-right: 5rem;
     padding-left: 5rem;
-    padding-top: 30rem; }
+    padding-top: 30rem;
+    text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-4__text {
         padding-top: 20rem;
@@ -555,6 +559,15 @@ body {
 /* SECTION GAMES | IN HOME
 /* ------------------------------------------- */
 .section-games {
-  padding-bottom: 25rem;
+  padding: 25rem 5rem;
   background-color: #000;
-  margin-top: -20vh; }
+  background-image: linear-gradient(to bottom right, black, rgba(0, 0, 0, 0.8)), url(../images/bg-1.jpg);
+  background-size: cover;
+  margin-top: -20vh;
+  position: relative; }
+  .section-games__paragraph {
+    width: 40%; }
+  .section-games__button {
+    position: absolute;
+    top: -5rem;
+    left: 0; }
