--- a/resources/sass/components/_section-containers.scss
+++ b/resources/sass/components/_section-containers.scss
@@ -21,7 +21,7 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     width: 100%;
-    height: 75vh;
+    height: 74vh;
     overflow: hidden;
     position: relative;
     z-index: 600;
@@ -33,6 +33,7 @@
 
     &__text {
         padding: 15rem 5rem 0 5rem;
+        text-align: center;
     }
 
     /*
@@ -63,6 +64,7 @@
 
     &__text {
         padding: 15rem 5rem 0 5rem;
+        text-align: center;
 
           // * --- MEDIA QUERIES --- * \\
           @include respond(tab-port) {
@@ -82,7 +84,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     width: 100%;
     height: 90vh;
-    margin-top: -12rem;
+    margin-top: -15rem;
     overflow: hidden;
     position: relative;
     z-index: 400;
@@ -96,6 +98,7 @@
         padding-right: 5rem;
         padding-left: 5rem;
         padding-top: 30rem;
+        text-align: center;
 
         // * --- MEDIA QUERIES --- * \\
         @include respond(tab-port) {
@@ -115,7 +118,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
     width: 100%;
     height: 100vh;
-    margin-top: -15rem;
+    margin-top: -20rem;
     overflow: hidden;
     position: relative;
     z-index: 300;
@@ -129,6 +132,7 @@
         padding-right: 5rem;
         padding-left: 5rem;
         padding-top: 30rem;
+        text-align: center;
 
         // * --- MEDIA QUERIES --- * \\
         @include respond(tab-port) {
