--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -34,7 +34,21 @@
 /* ------------------------------------------- */
 
 .section-games {
-    padding-bottom: 25rem;
+    padding: 25rem 5rem;
     background-color: $color-black;
+    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bg-1.jpg);
+    background-size: cover;
     margin-top: -20vh;
+    position: relative;
+
+    &__paragraph {
+        width: 40%;
+    }
+
+    &__button {
+        position: absolute;
+        top: -5rem;
+        left: 0;
+        
+    }
 }
