--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/_button.scss";
 @import "components/_bg-video.scss";
 @import "components/_section-containers.scss";
+@import "components/_section-games.scss";
 
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_grid.scss";
