--- a/resources/sass/components/_section-containers.scss
+++ b/resources/sass/components/_section-containers.scss
@@ -14,62 +14,142 @@
 
 // --- CONTAINER 1 --- \\
 .section-container-1 {
-
+    // BACKGROUND IMAGE SETUP
     background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)), url(../images/ray-tracing-1.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-position: top;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
+    // WIDTH AND HEIGHT OF THE CONTAINER
     width: 100%;
     height: 74vh;
+    // POSITIONING
     overflow: hidden;
     position: relative;
+    // PADDING AND Z-INDEX
+    padding-left: 35%;
     z-index: 600;
 
-    // * --- MEDIA QUERIES --- * \\
+    // * --- MEDIA QUERIES | FOR CONTAINER 1 --- * \\
     @include respond(phone) {
-        padding-bottom: 100rem;
+        padding-bottom: 80rem;
     }
 
+    // ICON SETUP
+    &__icon {
+        font-size: 6rem;
+        position: absolute;
+        top: 18%;
+        left: 48%;
+
+        // SETUP THE TEXT (h2) TO DISPLAY WITH MULTIPLE COLORS IN THE BACKGROUND \\
+        display: inline-block;
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        -webkit-background-clip: text;
+        color: transparent;
+        /*letter-spacing: .2rem;
+        transition: all .2s; */ // UNCOMMENT FOR ANIMATION EFFECT
+
+        // * --- MEDIA QUERIES | FOR THE ICON 1 --- * \\
+        @include respond(tab-port) {
+            margin-bottom: 0;
+            top: 10%;
+        }
+
+        @include respond(phone) {
+            top: 10%;
+        }
+    }
+
+    // PARAGRAPH TEXT SETUP
     &__text {
         padding: 15rem 5rem 0 5rem;
         text-align: center;
     }
 
-    /*
-    &__button-1 {                   // IF BUTTON NEEDS TO BE POSITIONED ON CENTER, UNCOMMENT THIS
-        @include button-center;
-    } */
+    // READ MORE BUTTON SETUP 
+    &__button-1 {                  
+       // @include button-center;   // IF BUTTON NEEDS TO BE POSITIONED ON CENTER, UNCOMMENT THIS
+
+        // * --- MEDIA QUERIES | FOR THE BUTTON CENTERING --- * \\
+        @include respond(phone) {
+            position: absolute;
+            left: 5%;
+            top: 0;
+        }
+    } 
 }
 // --- CONTAINER 1 --- \\
 
 // --- CONTAINER 2 --- \\
 .section-container-2 {
+    // BACKGROUND IMAGE SETUP
     background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bf-2.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-position: top;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
+    // WIDTH AND HEIGHT OF THE CONTAINER
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     margin-top: -12rem;
+    padding-left: 35%;
+    // POSITIONING
     overflow: hidden;
     position: relative;
+    // Z-INDEX
     z-index: 500;
 
-    // * --- MEDIA QUERIES --- * \\
+    // * --- MEDIA QUERIES | FOR CONTAINER 2 GENERAL --- * \\
     @include respond(phone) {
-        padding-bottom: 100rem;
+        padding-bottom: 80rem;
+        margin-top: -14rem;
     }
 
+    // ICON SETUP
+    &__icon {
+        font-size: 6rem;
+        position: absolute;
+        top: 20%;
+        left: 48%;
+
+        // SETUP THE TEXT (h2) TO DISPLAY WITH MULTIPLE COLORS IN THE BACKGROUND \\
+        display: inline-block;
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        -webkit-background-clip: text;
+        color: transparent;
+        /*letter-spacing: .2rem;
+        transition: all .2s; */ // UNCOMMENT FOR ANIMATION EFFECT
+
+        // * --- MEDIA QUERIES | FOR THE ICON --- * \\
+        @include respond(tab-port) {
+            margin-bottom: 0;
+            top: 10%;
+        }
+    }
+
+    // PARAGRAPH TEXT SETUP
     &__text {
-        padding: 15rem 5rem 0 5rem;
+        padding: 20rem 5rem 0 5rem;
         text-align: center;
 
-          // * --- MEDIA QUERIES --- * \\
+          // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
           @include respond(tab-port) {
             padding-top: 20rem;
             padding-bottom: 15rem;
+        }
+    }
+
+    // READ MORE BUTTON SETUP
+    &__button-2 {
+
+         // * --- MEDIA QUERIES --- * \\
+         @include respond(phone) {
+            position: absolute;
+            left: 5%;
+            top: 0;
         }
     }
 }
@@ -77,33 +157,77 @@
 
 // --- CONTAINER 3 --- \\
 .section-container-3 {
+    // BACKGROUND IMAGE SETUP
     background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bf-c-1.png);
     background-size: cover;
     background-attachment: fixed;
+    background-position: top;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
+    // WIDTH AND HEIGHT OF THE CONTAINER
     width: 100%;
-    height: 90vh;
+    height: 105vh;
     margin-top: -15rem;
+    padding-left: 35%;
+    // POSITIONING
     overflow: hidden;
     position: relative;
+    // Z-INDEX
     z-index: 400;
 
-     // * --- MEDIA QUERIES --- * \\
+     // * --- MEDIA QUERIES | FOR THE CONTAINER 3 --- * \\
      @include respond(phone) {
-        padding-bottom: 100rem;
+        padding-bottom: 80rem;
     }
 
+    // ICON SETUP
+    &__icon {
+        font-size: 6rem;
+        position: absolute;
+        top: 28%;
+        left: 48%;
+
+        // SETUP THE TEXT (h2) TO DISPLAY WITH MULTIPLE COLORS IN THE BACKGROUND \\
+        display: inline-block;
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        -webkit-background-clip: text;
+        color: transparent;
+        /*letter-spacing: .2rem;
+        transition: all .2s; */ // UNCOMMENT FOR ANIMATION EFFECT
+
+        // * --- MEDIA QUERIES | FOR THE ICON --- * \\
+        @include respond(tab-land) {
+            top: 28%;
+        }
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+            top: 10%;
+        }
+    }
+
+    // PARAGRAPH TEXT SETUP
     &__text {
         padding-right: 5rem;
         padding-left: 5rem;
         padding-top: 30rem;
         text-align: center;
 
-        // * --- MEDIA QUERIES --- * \\
+        // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
         @include respond(tab-port) {
             padding-top: 20rem;
             padding-bottom: 25rem;
+        }
+    }
+
+    // READ MORE BUTTON SETUP
+    &__button-3 {
+
+         // * --- MEDIA QUERIES | FOR THE BUTTON --- * \\
+         @include respond(phone) {
+            position: absolute;
+            left: 5%;
+            top: 0;
         }
     }
 }
@@ -111,33 +235,77 @@
 
 // --- CONTAINER 4 --- \\
 .section-container-4 {
+    // BACKGROUND IMAGE SETUP
     background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bf-4.png);
     background-size: cover;
     background-attachment: fixed;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);
+    background-position: top;
+   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%);    // IN THIS CASE NO CLIP PATH, BECAUSE OF THE PERFECT IMAGE POSITION. IT FITS NEXT SECTION TRANSITION BETTER. \\
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 86%); */
+    // WIDTH AND HEIGHT OF THE CONTAINER
     width: 100%;
     height: 100vh;
     margin-top: -20rem;
+    padding-left: 35%;
+    // POSITIONING
     overflow: hidden;
     position: relative;
+    // Z-INDEX
     z-index: 300;
 
-    // * --- MEDIA QUERIES --- * \\
+    // * --- MEDIA QUERIES | FOR THE CONTAINER 4 --- * \\
     @include respond(phone) {
-        padding-bottom: 100rem;
+        padding-bottom: 80rem;
     }
 
+    // ICON SETUP
+    &__icon {
+        font-size: 6rem;
+        position: absolute;
+        top: 30%;
+        left: 48%;
+
+        // SETUP THE TEXT (h2) TO DISPLAY WITH MULTIPLE COLORS IN THE BACKGROUND \\
+        display: inline-block;
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        -webkit-background-clip: text;
+        color: transparent;
+        /*letter-spacing: .2rem;
+        transition: all .2s; */ // UNCOMMENT FOR ANIMATION EFFECT
+
+        // * --- MEDIA QUERIES | FOR THE ICON --- * \\
+        @include respond(tab-land) {
+            top: 25%;
+        }
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+            top: 10%;
+            margin-top: -15rem;
+        }
+    }
+
+    // PARAGRAPH TEXT SETUP
     &__text {
         padding-right: 5rem;
         padding-left: 5rem;
         padding-top: 30rem;
         text-align: center;
 
-        // * --- MEDIA QUERIES --- * \\
+        // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
         @include respond(tab-port) {
             padding-top: 20rem;
-            padding-bottom: 15rem;
+        }
+    }
+
+    // READ MORE BUTTON SETUP
+    &__button-4 {
+
+         // * --- MEDIA QUERIES | FOR THE BUTTON --- * \\
+         @include respond(phone) {
+            position: absolute;
+            left: 5%;
+            top: 0;
         }
     }
 }
