--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -15,6 +15,12 @@
         position: absolute;
         top: 35%;
         right: 50%;
+
+        // * --- MEDIA QUERIES * --- \\
+        @include respond(phone) {
+            font-size: 3rem;
+            right: 45%;
+        }
     }
 
     &__logo-box {
@@ -26,56 +32,11 @@
         height: 15rem;
         top: 25%;
         left: 55%;
-    }
-}
 
-/* ------------------------------------------- */
-/* SECTION GAME 1 | IN HOME
-/* ------------------------------------------- */
-
-.section-game-1 {
-    padding: 25rem 5rem;
-    background-color: $color-black;
-    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bg-1.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    margin-top: -20vh;
-    position: relative;
-
-    &__paragraph {
-        width: 40%;
-    }
-
-    &__button {
-        position: absolute;
-        top: -5rem;
-        left: 0;
-    }
-}
-
-/* ------------------------------------------- */
-/* SECTION GAME 2 | IN HOME
-/* ------------------------------------------- */
-
-.section-game-2 {
-    padding: 25rem 5rem;
-    background-color: $color-black;
-    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/sottr-1.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    height: 100vh;
-    position: relative;
-
-    &__button {
-        position: absolute;
-        top: -5rem;
-        left: 0;
-    }
-    
-    &__container {
-        display: block;
-        float: right;
-        width: 40%;
-        text-align: right;
+        // * --- MEDIA QUERIES * --- \\
+        @include respond(phone) {
+            height: 10rem;
+            left: 60%;
+        }
     }
 }
