--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/_bg-video.scss";
 @import "components/_section-containers.scss";
 @import "components/_section-games.scss";
+@import "components/_products.scss";
 
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_grid.scss";
