Added Fixed Navigation To the bottom of the header. | Update #12 |

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -22,6 +22,7 @@
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_grid.scss";
 @import "layout/_header.scss";
+@import "layout/_navigation.scss";
 
 /* - PAGES FOLDER FILES - */
 @import "pages/_home.scss";
