--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -371,7 +371,8 @@ body {
   .header__video__content {
     height: 100%;
     width: 100%;
-    object-fit: cover; }
+    object-fit: cover;
+    z-index: 1; }
   @media (max-width: 75em) {
     .header__video {
       background-image: linear-gradient(to bottom right, black, rgba(0, 0, 0, 0.8)), url(../images/ray-tracing-1.jpg);
@@ -399,7 +400,7 @@ body {
   height: 90vh;
   overflow: hidden;
   position: relative;
-  z-index: 600; }
+  z-index: 15; }
   @media (max-width: 37.5em) {
     .section-container-1 {
       padding-bottom: 100rem; } }
@@ -442,7 +443,7 @@ body {
   margin-top: -12rem;
   overflow: hidden;
   position: relative;
-  z-index: 500; }
+  z-index: 14; }
   @media (max-width: 56.25em) {
     .section-container-2 {
       margin-top: -15rem; } }
@@ -490,7 +491,7 @@ body {
   margin-top: -15rem;
   overflow: hidden;
   position: relative;
-  z-index: 400; }
+  z-index: 13; }
   @media (max-width: 37.5em) {
     .section-container-3 {
       padding-bottom: 80rem; } }
@@ -539,7 +540,7 @@ body {
   margin-top: -20rem;
   overflow: hidden;
   position: relative;
-  z-index: 300; }
+  z-index: 12; }
   @media (max-width: 37.5em) {
     .section-container-4 {
       padding-bottom: 80rem; } }
@@ -723,7 +724,8 @@ body {
 /* ------------------------------------------- */
 .header {
   height: 110vh;
-  width: 100%; }
+  width: 100%;
+  z-index: 2; }
   .header__text-box {
     position: absolute;
     top: 50%;
@@ -743,6 +745,48 @@ body {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+
+/* ------------------------------------------- */
+/* NAVIGATION
+/* ------------------------------------------- */
+.navigation {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 7rem;
+  background: #000;
+  z-index: 200;
+  font-family: 'Lato';
+  text-align: center; }
+  .navigation__item {
+    display: inline-block;
+    padding: 2.4rem 5rem;
+    font-size: 1.2rem;
+    font-weight: 400; }
+  .navigation__anchor {
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 1.7rem; }
+
+@media (max-width: 37.5em) {
+  .navigation__item {
+    padding: 2.4rem .4rem; }
+  .navigation__anchor {
+    font-size: 1.4rem; } }
+
+.fixed {
+  position: fixed;
+  top: 0;
+  height: 7rem;
+  z-index: 20;
+  border-bottom: 0.2rem solid #76b900; }
+  .fixed .navigation__anchor {
+    border-bottom: 0.2rem solid #000;
+    transition: border-bottom .2s;
+    padding-bottom: .5rem; }
+  .fixed .navigation__anchor:hover {
+    border-bottom: 0.2rem solid #76b900; }
 
 /* - PAGES FOLDER FILES - */
 /* ------------------------------------------- */
@@ -778,7 +822,8 @@ body {
 /* ------------------------------------------- */
 .section-products {
   background-color: #000;
-  padding: 20rem 0 20rem 0; }
+  padding: 20rem 0 20rem 0;
+  z-index: 2; }
   @media (max-width: 56.25em) {
     .section-products {
       padding: 20rem 0 10rem 0; } }
