--- a/resources/sass/components/_bg-video.scss
+++ b/resources/sass/components/_bg-video.scss
@@ -15,6 +15,7 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+        z-index: 1;
     }
 
     // --- VIDEO NOT DISPLAYING ON SMALLER DEVICES (PERFORMANCE OPTIMIZATION) --- \\
