--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -48,6 +48,7 @@
 .section-products {
     background-color: $color-black;
     padding: 20rem 0 20rem 0;
+    z-index: 2;
 
     // * --- MEDIA QUERIES --- * \\
     @include respond(tab-port) {
