--- a/resources/sass/components/_section-games.scss
+++ b/resources/sass/components/_section-games.scss
@@ -6,7 +6,7 @@
     padding: 25rem 5rem;
     width: 100%;
     background-color: $color-black;
-    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/bg-1.jpg);
+    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .7)) ,url(../images/bg-1.jpg);
     background-size: cover; 
     background-attachment: fixed;
     background-position: top;
@@ -29,6 +29,11 @@
             text-align: center;
         }
     }
+
+    &__supp {
+        font-size: 1.3rem;
+        margin-top: -3rem;
+    }
 }
 
 /* ------------------------------------------- */
@@ -39,7 +44,7 @@
     padding: 25rem 5rem;
     width: 100%;
     background-color: $color-black;
-    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)) ,url(../images/sottr-1.jpg);
+    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .7)) ,url(../images/sottr-1.jpg);
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
@@ -63,6 +68,11 @@
             text-align: center;
         }
     }
+
+    &__supp {
+        font-size: 1.3rem;
+        margin-top: -3rem;
+    }
 }
 
 /* ------------------------------------------- */
@@ -73,7 +83,7 @@
     padding: 25rem 5rem;
     width: 100%;
     background-color: $color-black;
-    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .8)), url(../images/metro-1.jpg);
+    background-image: linear-gradient(to bottom right, rgba($color-black, 1), rgba($color-black, .7)), url(../images/metro-1.jpg);
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
@@ -96,5 +106,10 @@
             width: 100%;
             text-align: center;
         }
+    }
+
+    &__supp {
+        font-size: 1.3rem;
+        margin-top: -3rem;
     }
 }
