Improved Products Section. | Update #13 |

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -15,6 +15,7 @@
 /* - COMPONENTS FOLDER FILES - */
 @import "components/_button.scss";
 @import "components/_bg-video.scss";
+@import "components/_card.scss";
 @import "components/_section-containers.scss";
 @import "components/_section-games.scss";
 @import "components/_products.scss";
