--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -380,6 +380,164 @@ body {
       background-attachment: fixed; } }
 
 /* ------------------------------------------- */
+/* PRODUCT CARD BOX | SECTION PRODUCTS
+/* ------------------------------------------- */
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 52rem; }
+  .card__side {
+    height: 52rem;
+    transition: all .8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 40rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-image: linear-gradient(to right bottom, #7cd000, #577a1a); }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-color: #000; }
+      .card__side--back-2 {
+        background-color: #000; }
+      .card__side--back-3 {
+        background-color: #000; }
+  .card__paragraph {
+    color: #fff;
+    text-align: center;
+    font-size: 2.3rem;
+    padding-top: 5rem; }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+    .card__picture--1 {
+      background-image: linear-gradient(to right top, transparent, #76b900), url(../images/rtx-2.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right top, transparent, #7cd000), url(../images/rtx-3.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right top, transparent, #577a1a), url(../images/rtx-4.png); }
+  .card__heading {
+    font-size: 2.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 70%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(124, 208, 0, 0.85), rgba(87, 122, 26, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(124, 208, 0, 0.85), rgba(87, 122, 26, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(124, 208, 0, 0.85), rgba(87, 122, 26, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: #fff; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+    .card {
+      height: auto;
+      border-radius: 3px;
+      background-image: linear-gradient(to right bottom, #7cd000, #577a1a);
+      box-shadow: 0 1.5rem 40rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0% 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card:hover .card__side--back {
+        transform: rotateY(0); }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card--1 {
+        background-image: linear-gradient(to right bottom, #7cd000, #577a1a), url(../images/nat-5-small.jpg); } }
+    @media only screen and (max-width: 56.25em) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (hover: none) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (max-width: 56.25em) and (min-width: 125em), only screen and (hover: none) and (min-width: 125em) {
+      .card--1 {
+        background-image: linear-gradient(to right bottom, #7cd000), #577a1a, url(../images/rtx-1.jpg); } }
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+      .card--2 {
+        background-image: linear-gradient(to right bottom, #7cd000, #577a1a), url(../images/rtx-1jpg); } }
+    @media only screen and (max-width: 56.25em) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (hover: none) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (max-width: 56.25em) and (min-width: 125em), only screen and (hover: none) and (min-width: 125em) {
+      .card--2 {
+        background-image: linear-gradient(to right bottom, #7cd000), #577a1a, url(../images/rtx-1.jpg); } }
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+      .card--3 {
+        background-image: linear-gradient(to right bottom, #7cd000, #577a1a), url(../images/rtx-1.jpg); } }
+    @media only screen and (max-width: 56.25em) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (hover: none) and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (max-width: 56.25em) and (min-width: 125em), only screen and (hover: none) and (min-width: 125em) {
+      .card--3 {
+        background-image: linear-gradient(to right bottom, #7cd000), #577a1a, url(../images/rtx-1.jpg); } }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+  .card__cta {
+    position: relative;
+    top: 20%;
+    left: 0;
+    transform: translate(0);
+    width: 100%;
+    padding: 7rem 4rem 4rem 4rem; }
+  .card__price-box {
+    margin-bottom: 3rem; }
+  .card__price-value {
+    font-size: 4rem; }
+
+/* ------------------------------------------- */
 /* SECTION CONTAINERS
 /* ------------------------------------------- */
 .section-container-header {
