--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -1087,6 +1087,10 @@ nav.scroll ul li a {
     position: absolute;
     top: 45%;
     right: 50%; }
+    @media (max-width: 48em) {
+      .section-pb__heading {
+        padding-top: 3rem;
+        font-size: 2.8rem; } }
     @media (max-width: 37.5em) {
       .section-pb__heading {
         font-size: 3rem;
@@ -1096,6 +1100,9 @@ nav.scroll ul li a {
     height: 15rem;
     top: 35%;
     left: 55%; }
+    @media (max-width: 48em) {
+      .section-pb__logo {
+        top: 42%; } }
     @media (max-width: 37.5em) {
       .section-pb__logo {
         height: 10rem;
