--- a/resources/sass/layout/_navigation.scss
+++ b/resources/sass/layout/_navigation.scss
@@ -107,7 +107,7 @@ nav.scroll ul li a {
 }
 
 
-// THIS CLASS IS ADDED  WHEN USER STARTS SCROLLING | JS PART
+// FIXED NAV |  THIS CLASS IS ADDED  WHEN USER STARTS SCROLLING | JS PART
 .fixed {
     position: fixed;
     top: 0;
