--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -26,7 +26,6 @@
 
         @include respond(tab-land) {
             position: absolute;
-            top: 50%;
             left: 45%;
         }
 
@@ -40,5 +39,18 @@
      @include respond(phone) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+
+        .header__video {
+            display: none !important;
+        }
+
+        .header__text-box {
+            overflow: hidden;
+            background-image: url(../images/ray-tracing-2.jpg);
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            padding-top: 30rem;
+        } 
     } 
 }
