--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -358,6 +358,65 @@ body {
     left: 9.5rem; } }
 
 /* ------------------------------------------- */
+/* BUTTON MODIFIED | HEADER | BUT CLASS
+/* ------------------------------------------- */
+/* --- BUT CLASS SETUP GENERAL --- */
+.but {
+  position: relative;
+  display: inline-block;
+  color: #fff;
+  font-size: 1.4rem;
+  font-family: 'Lato';
+  text-decoration: none;
+  margin: 3rem 0;
+  border: 0.2rem solid #76b900;
+  padding: 1.4rem 6rem;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: all 1s ease; }
+
+.but::before {
+  content: "";
+  background: #76b900;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  transition: all 0.6s ease; }
+
+/* --- BUTTON'S ACTUAL SETUP --- */
+.but-modified::before {
+  width: 0;
+  height: 100%; }
+
+.but-modified:hover::before {
+  width: 100%; }
+
+.but-modified-2::before {
+  width: 100%;
+  height: 0; }
+
+.but-modified-2:hover::before {
+  height: 100%; }
+
+.but-modified-3::before {
+  width: 100%;
+  height: 0;
+  transform: translate(-50%, -50%) rotate(45deg); }
+
+.but-modified-3:hover::before {
+  height: 360%; }
+
+.but-modified-4::before {
+  width: 100%;
+  height: 0;
+  transform: translate(-50%, -50%) rotate(-45deg); }
+
+.but-modified-4:hover::before {
+  height: 360%; }
+
+/* ------------------------------------------- */
 /* BACKGROUND VIDEO | HEADER
 /* ------------------------------------------- */
 .header__video {
@@ -490,7 +549,7 @@ body {
     .card {
       height: auto;
       border-radius: 3px;
-      background-image: linear-gradient(to right bottom, #7cd000, #577a1a);
+      background-image: linear-gradient(to bottom, #7cd000, #577a1a);
       box-shadow: 0 1.5rem 40rem rgba(0, 0, 0, 0.15); }
       .card__side {
         height: auto;
@@ -904,6 +963,8 @@ body {
     left: 28%;
     transform: translate(-50%, -50%);
     text-align: left; }
+    .header__text-box__button {
+      margin-top: -2rem; }
     @media (max-width: 81.875em) {
       .header__text-box {
         left: 36%; } }
@@ -962,7 +1023,13 @@ body {
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1.7rem; }
+    font-size: 1.7rem;
+    border-bottom: .2rem solid transparent;
+    -webkit-transition: border-bottom 0.2s;
+    transition: border-bottom 0.2s;
+    padding-bottom: 1rem; }
+    .navigation__anchor:hover {
+      border-bottom: 0.2rem solid #76b900; }
   .navigation__menu-icon {
     background-color: #000;
     width: 100%;
@@ -1013,13 +1080,13 @@ nav.scroll ul li a {
   top: 0;
   height: 7rem;
   z-index: 20;
-  border-bottom: 0.1rem solid #76b900; }
+  border-bottom: 0.2rem solid #76b900; }
   .fixed .navigation__anchor {
     border-bottom: .2rem solid transparent;
     transition: border-bottom .2s;
     padding-bottom: .5rem; }
   .fixed .navigation__anchor:hover {
-    border-bottom: 0.1rem solid #76b900; }
+    border-bottom: 0.2rem solid #76b900; }
 
 /* ------------------------------------------- */
 /* FOOTER
@@ -1121,8 +1188,7 @@ nav.scroll ul li a {
 /* ------------------------------------------- */
 .section-products {
   background-color: #000;
-  padding: 20rem 0 20rem 0;
-  z-index: 2; }
+  padding: 15rem 0 15rem 0; }
   .section-products__heading {
     font-size: 5rem; }
   @media (max-width: 56.25em) {
