--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -84,6 +84,7 @@
     }
 }
 
+
 /* ------------------------------------------- */
 /* BUTTON TEXT | 
 /* ------------------------------------------- */
@@ -120,4 +121,80 @@
         top: 0;
         left: 9.5rem;
     }
+}
+
+
+/* ------------------------------------------- */
+/* BUTTON MODIFIED | HEADER | BUT CLASS
+/* ------------------------------------------- */
+
+/* --- BUT CLASS SETUP GENERAL --- */
+.but {
+    position: relative;
+    display: inline-block;
+    color: $color-white;
+    font-size: 1.4rem;
+    font-family: 'Lato';
+    text-decoration: none;
+    margin: 3rem 0;
+    border: .2rem solid $color-primary;
+    padding: 1.4rem 6rem;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: all 1s ease;
+}
+
+.but::before {
+    content: "";
+    background: $color-primary;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    transition: all 0.6s ease;
+}
+
+/* --- BUTTON'S ACTUAL SETUP --- */
+
+// BUTTON MODIFIED | 1 | FIRST BUTTON STYLE \\
+.but-modified::before {
+    width: 0;
+    height: 100%;
+}
+
+.but-modified:hover::before {
+    width: 100%;  
+}
+
+// BUTTON MODIFIED | 2 | SECOND BUTTON STYLE \\
+.but-modified-2::before {
+    width: 100%;
+    height: 0;
+}
+
+.but-modified-2:hover::before {
+    height: 100%;
+}
+
+// BUTTON MODIFIED | 3 | THIRD BUTTON STYLE \\
+.but-modified-3::before {
+    width: 100%;
+    height: 0;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.but-modified-3:hover::before {
+    height: 360%;
+}
+
+// BUTTON MODIFIED | 4 | FOURTH BUTTON STYLE \\
+.but-modified-4::before {
+    width: 100%;
+    height: 0;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.but-modified-4:hover::before {
+    height: 360%;
 }
