--- a/resources/sass/components/_card.scss
+++ b/resources/sass/components/_card.scss
@@ -184,7 +184,7 @@
         // FUNCTIONALITY \\
         height: auto;
         border-radius: 3px;   
-        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+        background-image: linear-gradient(to bottom, $color-primary-light, $color-primary-dark);
         box-shadow: 0 1.5rem 40rem rgba($color-black, .15);
 
         &__side {
